<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BronyTunes</string>
    <string name="action_settings">Settings</string>

    <string name="title_activity_main">BronyTunes</string>
    <string name="title_frag_featured">Featured</string>
    <string name="title_frag_trending">Trending</string>
    <string name="title_frag_new">New</string>

    <string name="hello_blank_fragment">Hello, Blank Fragment!</string>

    <string name="title_bug_capture">Report a bug</string>
    <string name="btn_submit">Submit</string>
    <string name="btn_cancel">Cancel</string>
    <string name="label_listen_now">Listen Now</string>
    <string name="label_radio">Manehattan Radio</string>
    <string name="label_library">Library</string>
    <string name="label_settings">Settings</string>
    <string name="label_offline_mode">Offline mode</string>

    <string-array name="label_main_tabs">
        <item>Featured</item>
        <item>Trending</item>
        <item>New</item>
    </string-array>
    <string name="title_activity_settings">Settings</string>

    <string name="hello_world">Hello world!</string>
    <string name="more">More</string>

</resources>
